--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -212,7 +212,6 @@ img:hover {
     -webkit-box-orient: vertical;
 }
 
-
 .btnCard {
     border: 5px solid;
     border-image-slice: 1;
@@ -244,3 +243,107 @@ img:hover {
 label{
     color:var(--black)
 }
+
+.social-icon a {
+    color: white;
+    width: 50px;
+    height: 50px;
+    display: inline-flex;
+    margin-right: 6px;
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+    background: linear-gradient( #18151F, #272423) padding-box, var(--gradient) border-box;
+    border-radius: 50em;
+    border: 4px solid transparent;
+}
+
+    .social-icon a::before {
+        content: "";
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        background: var(--gradient);
+        background-clip: padding-box;
+        border-radius: 50%;
+        transform: scale(0);
+        transition: 0.3s ease-in-out;
+    }
+
+    .social-icon a:hover::before {
+        transform: scale(1);
+    }
+
+
+    .social-icon a img {
+        width: 70%;
+        z-index: 1;
+        transition: 0.3s ease-in-out;
+    }
+
+    .social-icon a:hover img {
+        filter: brightness(3)
+    }
+
+
+.draw-border {
+    box-shadow: inset 0 0 0 4px var(--gray);
+    transition: color 0.25s 0.0833333333s;
+    position: relative;
+}
+
+    .draw-border::before, .draw-border::after {
+        border: 0 solid transparent;
+        box-sizing: border-box;
+        content: '';
+        pointer-events: none;
+        position: absolute;
+        width: 0;
+        height: 0;
+        bottom: 0;
+        right: 0;
+    }
+
+    .draw-border::before {
+        border-bottom-width: 4px;
+        border-left-width: 4px;
+    }
+
+    .draw-border::after {
+        border-top-width: 4px;
+        border-right-width: 4px;
+    }
+
+    .draw-border:hover {
+        color: var(--yellow);
+    }
+
+        .draw-border:hover::before, .draw-border:hover::after {
+            border-color: var(--yellow);
+            transition: border-color 0s, width 0.25s, height 0.25s;
+            width: 100%;
+            height: 100%;
+        }
+
+        .draw-border:hover::before {
+            transition-delay: 0s, 0s, 0.25s;
+        }
+
+        .draw-border:hover::after {
+            transition-delay: 0s, 0.25s, 0s;
+        }
+
+.btn-border {
+    background: none;
+    border: none;
+    cursor: pointer;
+    line-height: 1.5;
+    padding: 0.8em 1em;
+    letter-spacing: 0.05rem;
+    text-decoration:none;
+}
+
+
+    .btn-border:focus {
+        outline: 2px dotted var(--gray);
+    }
